Fix Formatters optimization