@@ -5,6 +5,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import org.jabref.logic.formatter.IdentityFormatter;
 import org.jabref.logic.formatter.bibtexfields.EscapeAmpersandsFormatter;
@@ -24,6 +25,9 @@ import org.jabref.model.entry.types.StandardEntryType;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -73,7 +77,7 @@ public class FieldFormatterCleanupsTest {
         FieldFormatterCleanups actions = new FieldFormatterCleanups(true, FieldFormatterCleanups.parse("title[lower_case]"));
 
         FieldFormatterCleanup lowerCaseTitle = new FieldFormatterCleanup(StandardField.TITLE, new LowerCaseFormatter());
-        assertEquals(Collections.singletonList(lowerCaseTitle), actions.getConfiguredActions());
+        assertEquals(List.of(lowerCaseTitle), actions.getConfiguredActions());
 
         actions.applySaveActions(entry);
 
@@ -348,8 +352,16 @@ public class FieldFormatterCleanupsTest {
                 """));
     }
 
-    @Test
-    void formatterFromString() {
-        assertEquals(new ReplaceUnicodeLigaturesFormatter(), FieldFormatterCleanups.getFormatterFromString("replace_unicode_ligatures"));
+    public static Stream<Arguments> formatterFromString() {
+        return Stream.of(
+                Arguments.of(new ReplaceUnicodeLigaturesFormatter(), "replace_unicode_ligatures"),
+                Arguments.of(new LowerCaseFormatter(), "lower_case")
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource
+    void formatterFromString(Formatter expected, String input) {
+        assertEquals(expected, FieldFormatterCleanups.getFormatterFromString(input));
     }
 }
